js data splitted final

--- a/board.html
+++ b/board.html
@@ -42,6 +42,7 @@
   <script src="assets/js/add_task/add_taskHtml.js"></script>
   <script src="assets/js/add_task/add_taskProperties.js"></script>
   <script src="assets/js/add_task/add_taskGetInfo.js"></script>
+  <script src="assets/js/add_task/add_taskMenuAnimation.js"></script>
   <script src="assets/js/contacts/contacts.js"></script>
   <script src="assets/js/contacts/contactsHtml.js"></script>
   <script src="assets/js/contacts/contactProperties.js"></script>
