--- a/add_task.html
+++ b/add_task.html
@@ -14,6 +14,7 @@
     <script src="assets/js/add_task/add_taskHtml.js"></script>
     <script src="assets/js/add_task/add_taskProperties.js"></script>
     <script src="assets/js/add_task/add_taskGetInfo.js"></script>
+    <script src="assets/js/add_task/add_taskMenuAnimation.js"></script>
     <script src="assets/js/login/login.js"></script>
     <script src="assets/js/login/loginHtml.js"></script>
     <script src="assets/js/login/loginProperties.js"></script>
